@@ -239,6 +239,7 @@ Version 1.1.0-CVS (?? ??? 2006)
     + Category was lost wan clicking on prev/next month in month.php
     + Fixed small bug if using 59 minutes for event time
   - New Features / Enhancements / Changes:
+    + Implemented PATCH 1470047: Auto-Completing Tasks
     + Changed gradients to save images in cache file and return real url if called
       from background_css function in css files
     + Changed css and javascript to external files and enabled caching
